--- a/Store.Domain/Store.Domain.csproj
+++ b/Store.Domain/Store.Domain.csproj
@@ -69,6 +69,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartManagement\Cart.cs" />
+    <Compile Include="CartManagement\CartRepository.cs" />
+    <Compile Include="CartManagement\ICartRepository.cs" />
     <Compile Include="CustomerManagement\Customer.cs" />
     <Compile Include="CustomerManagement\CustomerRepository.cs" />
     <Compile Include="CustomerManagement\ICustomerRepository.cs" />
