--- a/Store.Web/Web.config
+++ b/Store.Web/Web.config
@@ -71,11 +71,19 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_ICustomerService" />
         <binding name="BasicHttpBinding_IProductService" />
+        <binding name="BasicHttpBinding_IOrderService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:58486/CustomerService/CustomerService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService" contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
-      <endpoint address="http://localhost:58486/ProductService/ProductService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService" contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+      <endpoint address="http://localhost:58486/CustomerService/CustomerService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
+        contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+      <endpoint address="http://localhost:58486/ProductService/ProductService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
+        contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+      <endpoint address="http://localhost:58486/OrderService/OrderService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService"
+        contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
     </client>
   </system.serviceModel>
 </configuration>
