--- a/Store.Service/Web.config
+++ b/Store.Service/Web.config
@@ -13,7 +13,7 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-        <authentication mode="Windows" />
+        <authentication mode="Forms" />
   </system.web>
   <system.serviceModel>
     <bindings>
