--- a/Store.Web/Web.config
+++ b/Store.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -51,6 +51,14 @@
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -65,7 +73,12 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -75,15 +88,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:58486/CustomerService/CustomerService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService"
-        contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
-      <endpoint address="http://localhost:58486/ProductService/ProductService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService"
-        contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
-      <endpoint address="http://localhost:58486/OrderService/OrderService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService"
-        contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
+      <endpoint address="http://localhost:58486/CustomerService/CustomerService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICustomerService" contract="CustomerService.ICustomerService" name="BasicHttpBinding_ICustomerService" />
+      <endpoint address="http://localhost:58486/ProductService/ProductService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductService" contract="ProductService.IProductService" name="BasicHttpBinding_IProductService" />
+      <endpoint address="http://localhost:58486/OrderService/OrderService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderService" contract="OrderService.IOrderService" name="BasicHttpBinding_IOrderService" />
     </client>
   </system.serviceModel>
 </configuration>
